--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -1182,16 +1182,18 @@ small {
     0% 99%
   );
 }
-/* TODO: clip-path bridge v1 & v2 */
+
 .bridge.v2 {
   /* height: 66px; */
   /* height: 3.5vw; */
   height: 3.15vw;
+  clip-path: polygon(40% 0, 60% 0, 74% 9%, 86% 25%, 96% 46%, 99% 61%, 100% 100%, 82% 100%, 72% 97%, 71% 76%, 67% 63%, 61% 59%, 58% 76%, 57% 100%, 43% 100%, 42% 79%, 39% 62%, 32% 58%, 27% 67%, 25% 81%, 24% 97%, 16% 100%, 0% 100%, 0% 68%, 3% 47%, 13% 25%, 26% 8%);
 }
 .bridge.v3 {
   /* height: 86px; */
-  height: 4.5vw;
+  /* height: 4.5vw; */
   height: 4.05vw;
+  clip-path: polygon(48% 0%, 70% 0%, 84% 0, 99% 4%, 99% 18%, 96% 23%, 97% 78%, 100% 81%, 99% 97%, 82% 100%, 62% 100%, 31% 99%, 8% 99%, 0 98%, 0 85%, 4% 81%, 4% 28%, 0 23%, 0 11%, 14% 4%, 29% 0%);
 }
 .cloth {
   /* height: 270px; */
@@ -1511,12 +1513,12 @@ small {
     -2% 50%
   );
 }
-/* TODO: clip-path pig v2 & v3 */
-.pig.v2 {
 
+.pig.v2 {
+  clip-path: polygon(59% 9%, 65% 0%, 73% 0%, 84% 11%, 88% 24%, 91% 34%, 100% 39%, 100% 51%, 89% 60%, 77% 64%, 68% 59%, 69% 71%, 75% 96%, 74% 100%, 66% 100%, 62% 87%, 54% 80%, 49% 68%, 36% 66%, 25% 58%, 23% 70%, 15% 67%, 10% 72%, 8% 84%, 2% 87%, 0% 81%, 0% 74%, 6% 50%, 10% 27%, 10% 9%, 16% 5%, 25% 0%, 40% 0%);
 }
 .pig.v3 {
-
+  clip-path: polygon(46% 0%, 68% 1%, 83% 9%, 92% 14%, 97% 34%, 96% 41%, 100% 50%, 100% 70%, 99% 83%, 100% 92%, 85% 95%, 76% 91%, 75% 81%, 74% 74%, 60% 79%, 45% 79%, 31% 73%, 25% 89%, 23% 100%, 13% 100%, 0% 99%, 0% 94%, 3% 87%, 2% 57%, 7% 40%, 4% 31%, 6% 21%, 14% 10%, 29% 2%);
 }
 .plane {
   /* height: 160px; */
@@ -1554,16 +1556,17 @@ small {
     2% 68%
   );
 }
-/* TODO: clip-path plane v2 & v3 */
 .plane.v2 {
   /* height: 100px; */
   /* height: 5.2vw; */
   height: 4.68vw;
+  clip-path: polygon(50% -2%, 53% 13%, 74% 15%, 100% 20%, 100% 27%, 71% 26%, 58% 26%, 60% 35%, 71% 36%, 71% 40%, 61% 42%, 62% 52%, 67% 54%, 69% 59%, 96% 63%, 99% 70%, 94% 72%, 62% 74%, 66% 79%, 67% 91%, 65% 99%, 59% 98%, 58% 91%, 56% 88%, 55% 76%, 43% 76%, 43% 85%, 39% 98%, 34% 98%, 32% 89%, 32% 80%, 36% 74%, 3% 71%, 1% 67%, 4% 62%, 29% 59%, 31% 54%, 36% 52%, 37% 42%, 29% 40%, 29% 35%, 39% 36%, 42% 25%, 0% 26%, 0% 19%, 27% 15%, 47% 13%);
 }
 .plane.v3 {
   /* height: 100px; */
   /* height: 5.2vw; */
   height: 4.68vw;
+  clip-path: polygon(13% 0%, 24% 0%, 49% 7%, 77% 19%, 90% -6%, 91% 13%, 89% 30%, 91% 34%, 87% 39%, 108% 53%, 84% 49%, 81% 65%, 75% 57%, 68% 62%, 83% 73%, 85% 81%, 74% 88%, 56% 77%, 55% 90%, 49% 100%, 42% 94%, 42% 83%, 40% 75%, 33% 85%, 27% 82%, 25% 72%, 29% 64%, 16% 60%, 11% 53%, 0% 43%, 0% 34%, 3% 29%, 11% 31%, 14% 26%, 31% 13%, 13% 5%);
 
 }
 .pokerchip {
