--- a/public/main-styles.css
+++ b/public/main-styles.css
@@ -140,7 +140,7 @@ body {
   width: 100%;
   height: 9vw;
   justify-content: space-around;
-  align-items: center;
+  /* align-items: center; */
   padding-top: 1.1vw;
 }
 
@@ -235,8 +235,8 @@ body {
 }
 
 #play-again-box {
-  width: 20%;
-  transform: translateX(2vw);
+  width: 34vw;
+  padding-right: 8vw;
 }
 
 #sound-on,
@@ -331,6 +331,7 @@ body {
   font-weight: bold;
   flex-shrink: 0;
   color: white;
+  margin: 0.3vw;
 
   -webkit-transition: transform 0.4s ease-out, border-style 0.4s ease-out,
   border-width 0.4s ease-out, color 0.4s ease-out;
@@ -390,20 +391,14 @@ body {
   border-width: 0.45vw;
 }
 
-#joined-players .player,
-#select-players .player {
-  margin: 0.3vw;
-  position: relative;
-}
-
-/* #players-end .player-name, */
-#joined-players .player-name {
+#joined-players .player-name,
+#players-end .player-name {
   position: relative;
   bottom: 9%;
 }
 
-/* #players-end .player-points, */
-#joined-players .player-points {
+#joined-players .player-points,
+#players-end .player-points {
   position: absolute;
   bottom: 6%;
   transition: transform 0.3s ease-out;
@@ -427,24 +422,20 @@ body {
 #players-end {
   position: relative;
   display: flex;
-  flex-direction: column;
-  /* margin-right: 6vw; */
-  justify-content: center;
+  width: 66vw;
+  height: 48vw;
+  justify-content: space-around;
+  padding-top: 1.1vw;
 }
 
 #players-end .player {
   border-style: solid;
   color: black;
-  height: 3.1vw;
-  width: 10vw;
-  flex-direction: row;
-  border-radius: 1vw;
-  margin-bottom: 1.2vw;
-  padding: 0 0.5vw;
-}
 
-#players-end .player-name {
-  margin-right: 1vw;
+  -webkit-transition: transform 1s ease-out;
+  -moz-transition: transform 1s ease-out;
+  -o-transition: transform 1s ease-out;
+  transition: transform 1s ease-out;
 }
 
 #players-end .player:hover {
@@ -452,51 +443,18 @@ body {
   transform: unset;
 }
 
-#players-end .player:first-child {
-  transform: scale(1.1);
-  /* margin-bottom: 4vh; */
-  margin-bottom: 1.7vw;
+#players-end .winner {
   animation: pulse 2s infinite linear;
-  /* border-style: groove; */
-  /* border-width: 10px; */
 }
 
 @keyframes pulse {
   0%,
   100% {
-    transform: scale(1.1);
+    transform: scale(1);
   }
   50% {
     transform: scale(1.3);
   }
-}
-
-#players-end .player:nth-child(2) {
-  transform: translateX(-2vw);
-}
-
-#players-end .player:nth-child(3) {
-  transform: translateX(-3.5vw);
-}
-
-#players-end .player:nth-child(4) {
-  transform: translateX(-5vw);
-}
-
-#players-end .player:nth-child(5) {
-  transform: translateX(-6.5vw);
-}
-
-#players-end .player:nth-child(6) {
-  transform: translateX(-8vw);
-}
-
-#players-end .player:nth-child(7) {
-  transform: translateX(-9.5vw);
-}
-
-#players-end .player:nth-child(8) {
-  transform: translateX(-11vw);
 }
 
 /* §§ --------CROWN / game master indicator------- */
